
ACLOCAL_AMFLAGS = -I $(top_srcdir)/macros

SUBDIRS = src

DIST_SUBDIRS = src


EXTRA_DIST= \
	fonts autogen.sh

# INCLUDES = -I$(top_srcdir)/src -I$(top_builddir)/src \
#            $(GTKMM_CFLAGS) 
#

# LDADD = $(GTKMM_LIBS)

#dist_desktop_DATA = decurs.desktop
#desktopdir        = $(datadir)/applications

deliver: dist
	 echo $(VERSION) `pwd`
	 
